fixed alignment, pictures, added links

--- a/styles/bene_style.scss
+++ b/styles/bene_style.scss
@@ -6,6 +6,12 @@ body {
   text-rendering: geometricPrecision;
   -webkit-font-smoothing: antialiased;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .navbar {
   float: right;
   height: 100vh;
@@ -92,16 +98,17 @@ body {
   .intro-content {
     display: grid;
     justify-items: center;
-
+    margin-top: 9vh;
     .brands-x-crisis {
       align-self: flex-end;
       box-sizing: border-box;
       background-image: url(../assets/brands-x-crisis.svg);
-      width: 100%;
-      height: 75vh;
+      width: 80%;
+      height: 60vh;
       background-position: center;
       background-repeat: no-repeat;
-      margin-left: -30px;
+      background-size: contain;
+      margin-left: -40px;
     }
   }
   .header {
@@ -120,6 +127,13 @@ body {
     @include margin_align();
     .bene-logo {
       height: 134px;
+    }
+    span {
+      cursor: pointer;
+      transition: 300ms ease-out;
+      &:hover {
+        opacity: 0.5;
+      }
     }
   }
 }
@@ -148,7 +162,8 @@ body {
     }
     h1 {
       font-family: $bene_font_2;
-      font-size: 22px;
+      font-size: 20px;
+      letter-spacing: 0.05rem;
     }
     h2 {
       font-family: $bene_font_3;
@@ -247,7 +262,7 @@ body {
     grid-gap: 50px;
     margin-top: 50px;
     .a-a {
-      background-image: url("../assets/kerry\ 2.jpg");
+      background-image: url("../assets/iha.jpg");
       grid-column-start: 1;
       grid-column-end: 3;
       grid-row-start: 1;
@@ -256,7 +271,7 @@ body {
       background-position: center;
     }
     .a-b {
-      background-image: url("../assets/iha.jpg");
+      background-image: url("../assets/kerry\ 2.jpg");
       grid-column-start: 3;
       grid-column-end: 5;
       grid-row-start: 1;
@@ -284,7 +299,7 @@ body {
     }
 
     .b-a {
-      background-image: url("../assets/propshop.jpeg");
+      background-image: url("../assets/girl-sun.png");
       grid-column-start: 1;
       grid-column-end: 3;
       grid-row-start: 3;
@@ -294,7 +309,7 @@ body {
       transition: 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
     }
     .b-b {
-      background-image: url("../assets/girl-sun.png");
+      background-image: url("../assets/propshop.jpeg");
       grid-column-start: 3;
       grid-column-end: 5;
       grid-row-start: 4;
@@ -307,7 +322,7 @@ body {
       grid-column-start: 5;
       grid-column-end: 7;
       grid-row-start: 3;
-      grid-row-end: 5;
+      grid-row-end: 7;
       background-size: cover;
       background-position: center;
     }
@@ -358,6 +373,21 @@ body {
 }
 
 @media only screen and (max-width: 1440px) {
+  .how-we-work {
+    padding: 4rem 7rem;
+  }
+  .campaigns {
+    padding: 4rem 7rem;
+  }
+  .collabs {
+    padding: 4rem 7rem;
+  }
+  .bene-video {
+    padding: 4rem 7rem;
+  }
+}
+
+@media only screen and (max-width: 1180px) {
   .how-we-work {
     padding: 4rem;
   }
@@ -417,7 +447,7 @@ body {
     .intro-content {
       display: grid;
       justify-items: center;
-      height: 80vh;
+
       .brands-x-crisis {
         align-self: flex-end;
       }
@@ -582,7 +612,7 @@ body {
     .intro-content {
       display: grid;
       justify-items: center;
-
+      margin-top: 4vh;
       .brands-x-crisis {
         align-self: center;
         padding: 0px 30px;
